--- a/lesson3/task1/package.json
+++ b/lesson3/task1/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.20.2",
-    "core-js": "^3.27.2"
+    "core-js": "^3.27.2",
+    "modules": false
   },
   "description": ""
 }
