--- a/lesson5/task1_1/package.json
+++ b/lesson5/task1_1/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack ./src/index.js -p",
+    "build:scripts": "webpack ./src/index.js -p",
     "watch": "webpack ./src/index.js -d --devtool eval-source-maps -w"
   },
   "author": "",
