--- a/lesson6/task1/package.json
+++ b/lesson6/task1/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^3.6.0",
+    "file-loader": "^6.2.0",
     "style-loader": "^1.3.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.46.0",
