--- a/lesson6/task1/package.json
+++ b/lesson6/task1/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "css-loader": "^3.6.0",
     "file-loader": "^6.2.0",
+    "sass": "^1.58.3",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.3.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.46.0",
