--- a/lesson6/task1/package.json
+++ b/lesson6/task1/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "css-loader": "^3.6.0",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "sass": "^1.58.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.3.0",
