--- a/lesson6/task3/package.json
+++ b/lesson6/task3/package.json
@@ -5,11 +5,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "build:styles": "sass ./src/styles/index.scss ./dist/styles.css",
-    "copy:html": "cp ./src/index.html ./dist/index.html",
-    "build:scripts": "babel ./src --out-dir=./dist",
-    "clean": "rm -rf ./dist",
-    "build": "npm-run-all clean build:* copy:*",
+    "build": "webpack -p",
     "watch": "webpack -d --devtools eval-source-maps -w"
   },
   "author": "",
@@ -19,13 +15,16 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "babel-loader": "^8.3.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "file-loader": "^5.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^29.3.1",
+    "mini-css-extract-plugin": "^0.8.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.57.1",
     "sass-loader": "^8.0.2",
-    "style-loader": "^3.3.1",
+    "style-loader": "^1.3.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
