--- a/lesson6/task1/package.json
+++ b/lesson6/task1/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack -p",
-    "watch": "webpack -d --devtools eval-source-maps -w"
+    "start": "webpack-dev-server -d --devtools eval-source-maps --open"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "style-loader": "^1.3.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.3"
   }
 }
