--- a/lesson6/task3/package.json
+++ b/lesson6/task3/package.json
@@ -18,15 +18,15 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "file-loader": "^5.1.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
-    "mini-css-extract-plugin": "^0.8.0",
+    "mini-css-extract-plugin": "0.8.2",
     "npm-run-all": "^4.1.5",
     "sass": "^1.57.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.3.0",
     "url-loader": "^3.0.0",
-    "webpack": "^4.46.0",
+    "webpack": "^5.75.0",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
