--- a/lesson6/task3/package.json
+++ b/lesson6/task3/package.json
@@ -6,32 +6,32 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "build": "webpack -p",
-    "watch": "webpack -d --devtools eval-source-maps -w"
+    "start": "webpack-dev-server -d --devtools eval-source-maps --open"
   },
   "author": "",
   "license": "ISC",
+  "keywords": [],
+  "description": "",
   "devDependencies": {
-    "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
-    "babel-loader": "^8.3.0",
+    "@babel/cli": "^7.7.5",
+    "@babel/core": "^7.7.5",
+    "@babel/preset-env": "^7.7.6",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.6.0",
-    "file-loader": "^5.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.3.1",
-    "mini-css-extract-plugin": "0.8.2",
-    "npm-run-all": "^4.1.5",
-    "sass": "^1.57.1",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.3.0",
+    "css-loader": "^3.3.2",
+    "file-loader": "^5.0.2",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "sass": "^1.23.7",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.1",
     "url-loader": "^3.0.0",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
-    "core-js": "^3.27.2"
-  },
-  "keywords": [],
-  "description": ""
+    "core-js": "^3.5.0"
+  }
 }
