--- a/lesson6/task3/package.json
+++ b/lesson6/task3/package.json
@@ -6,7 +6,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "build": "webpack -p",
-    "start": "webpack-dev-server -d --devtools eval-source-maps --open"
+    "start": "webpack-dev-server -d --devtools eval-source-maps --open",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +21,9 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.3.2",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.19.1",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
